# llvm-project

./: .cursorignore  .gitignore  CODECHKR-6038_action_plan.md  automaton_analysis.cpp  automaton_feasibility_analysis.md  cycle_handling.tex  detailed_automaton_analysis.cpp  diagnostic_integration_analysis.md  diagnostic_label_preferences.md  dominance_postdominance_equivalence.md  embedded-dsl-framework-test.plist  evaluation_analysis.md  evaluation_hypothesis.md  inInitializationContext.cpp  interprocedural_rcu_analysis.md  leak_missing_free_analysis.md  leak_missing_free_expectations.md  ltl_formula_labeling_research.md  malloc-dsl-ok.txt  malloc_free_property_summary.md  modeling_end_considerations.md  negated_implementation_complete.md  negated_implementation_design.md  negation_analysis.cpp  negation_violation_analysis.md  next_steps.md  rcu_visualizer_outputs.md  read_section_equivalence.md  refactor_checkBind_api.md  refactored_analysis.md  run_tests.sh  simple_automaton_analysis  simple_automaton_analysis.cpp  test_double_free_expectations.md  test_leak_missing_free_expectations.md  test_ok_expectations.md  transforming_liveness_to_safety.md
clang-tools-extra/clang-tidy/cert/: CERTTidyModule.cpp  CMakeLists.txt  SmartPointerDeleterCheck.cpp  SmartPointerDeleterCheck.h
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: cert-smart-pointer-deleter.rst  list.rst
clang-tools-extra/test/clang-tidy/checkers/: cert-smart-pointer-deleter.cpp
clang/docs/analyzer/: checkers.rst  developer-docs.rst  user-docs.rst
clang/docs/analyzer/developer-docs/: ContainerModeling.rst
clang/docs/analyzer/user-docs/: Annotations.rst  TaintAnalysisConfiguration.rst
clang/lib/AST/: ASTImporter.cpp  ExprConstant.cpp  NestedNameSpecifier.cpp
clang/lib/Analysis/: AnalysisDeclContext.cpp
clang/lib/CrossTU/: CrossTranslationUnit.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/StaticAnalyzer/Checkers/: ArrayBoundCheckerV2.cpp  BlockInCriticalSectionChecker.cpp  CMakeLists.txt  CStringChecker.cpp  CheckSecuritySyntaxOnly.cpp  ContainerModeling.cpp  EmbeddedDSLMonitorChecker.cpp  EmbeddedDSLSpot.cpp  EmbeddedDSLSpot.h  FuchsiaHandleChecker.cpp  GenericTaintChecker.cpp  Iterator.cpp  Iterator.h  IteratorModeling.cpp  LTLFormulaChecker.cpp  MIGChecker.cpp  MallocChecker.cpp  MutexModeling.cpp  MutexModelingGDM.h  OpaqueSTLFunctionsChecker.cpp  PthreadLockCheckerV2.cpp  StdLibraryFunctionsChecker.cpp  StreamChecker.cpp  UnreachableCodeChecker.cpp
clang/lib/StaticAnalyzer/Checkers/MutexModeling/: CallDescriptionBasedMatcher.h  MutexModelingDomain.h  MutexModelingGDM.h  MutexRegionExtractor.h
clang/lib/StaticAnalyzer/Checkers/cert/: InvalidPtrChecker.cpp
clang/lib/StaticAnalyzer/Core/: BugReporter.cpp  BugReporterVisitors.cpp  CallEvent.cpp  CoreEngine.cpp  ExprEngine.cpp  RegionStore.cpp
clang/test/: CMakeLists.txt  lit.cfg.py
clang/test/Analysis/: analyzer-config.c  array-of-structs-initializer-not-visible-in-main.c  array-of-structs-initializer-not-visible-in-main.cpp  array-of-structs-initializer.cpp  block-in-critical-section.cpp  bstring-oob-suppressed.cpp  bstring-uninit-only.cpp  bstring.c  bstring.cpp  cstring-uninitread-notes.c  embedded-dsl-framework-test.c  embedded-dsl-monitor-malloc-free.c  embedded-dsl-mutex-lock-unlock.c  lifetime-cfg-output.cpp  loop-unrolling.cpp  ltlformula.c  malloc.c  scopes-cfg-output.cpp  std-c-library-functions-config.c  string.c  taint-diagnostic-visitor.c  taint-generic.c  this-pointer.cpp  unreachable-code-path.cpp
clang/test/Analysis/Inputs/: isalnum-summary.yaml  system-header-simulator-cxx-std-suppression.h
clang/test/Analysis/cert/: env34-c.c
clang/test/Analysis/clang-exception-metrics/: usr-mapping-template-instantiation.sh
clang/test/Analysis/clang-exception-scan/: apply_noexcept.cpp  gen_compdb.py  (+7 more)
clang/test/SemaCXX/: constexpr-builtin-powi.cpp  constexpr-vectors.cpp
clang/test/Tooling/: rcu-analyzer-basic-read.c  rcu-analyzer-basic-update.c  rcu-analyzer-call-rcu.c  rcu-analyzer-cpp.cpp  rcu-analyzer-dereference.c  rcu-analyzer-ignore-headers.c  rcu-analyzer-points-dominators-complex.c  rcu-analyzer-points-dominators-simple.c  rcu-analyzer-read-section-branched.c  rcu-analyzer-read-section-linear.c  rcu-analyzer-read-section-nested.c
clang/test/clang-exception-scan/: CMakeLists.txt  basic-throw.cpp  basic-throw2.cpp  gen-compdb.py  lit.cfg.py  lit.site.cfg.py.in
clang/tools/: CMakeLists.txt
clang/tools/clang-exception-scan/: ASTBasedExceptionAnalyzer.cpp  ASTBasedExceptionAnalyzer.h  CMakeLists.txt  CallGraphGeneratorConsumer.cpp  CallGraphGeneratorConsumer.h  CalledFunctionInfoConsumer.hpp  CaughtExceptionInfoConsumer.hpp  ClangExceptionScan.cpp  ClangExceptionScanAction.hpp  ClangExceptionScanConsumer.hpp  CollectExceptionInfo.cpp  CollectExceptionInfo.h  CommonTypes.h  ExceptionAnalysisInfo.h  ExceptionAnalyzer.cpp  ExceptionAnalyzer.h  ExceptionContext.hpp  ExceptionInfoConsumer.hpp  GlobalExceptionInfo.h  NoexceptApplier.cpp  NoexceptApplier.h  NoexceptDependeeConsumer.cpp  NoexceptDependeeConsumer.h  Serialization.h  TUDependencyGraph.cpp  TUDependencyGraph.h  ThrownExceptionInfoConsumer.hpp  TryBlockInfoConsumer.hpp  TypeMappingConsumer.cpp  TypeMappingConsumer.h  USRMappingConsumer.cpp  USRMappingConsumer.h  exception-scan-parser.py  no-throw-runner.py  testing_exception_scan.md
clang/tools/clang-rcu-analyzer/: CMakeLists.txt  ClangRCUAnalyzer.cpp
clang/unittests/AST/: ASTImporterVisibilityTest.cpp
clang/unittests/CrossTU/: CrossTranslationUnitTest.cpp
clang/unittests/StaticAnalyzer/: CMakeLists.txt  CallDescriptionTest.cpp  EmbeddedDSLFrameworkTest.cpp
clang/unittests/Tooling/: ASTBasedExceptionAnalyzerTest.cpp  CMakeLists.txt  CallGraphGeneratorTest.cpp  ExceptionAnalyzerTest.cpp  NoexceptApplierTest.cpp  NoexceptDependeeTest.cpp  TUDependencyGraphTest.cpp  TypeMappingConsumerTest.cpp  USRMappingConsumerTest.cpp
clang/www/analyzer/: annotations.html  menu.html.incl
lld/test/MachO/: special-symbol-ld-hidden.s
llvm/lib/Support/: GraphWriter.cpp
(+22 files in other folders)
